@@ -43,20 +43,20 @@ import java.awt.GridBagLayout;
 import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.util.Arrays;
 
 import javax.sql.RowSet;
 import javax.swing.JFrame;
 import javax.swing.JLabel;
 
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
+import java.lang.System.Logger;
+import java.lang.System.Logger.Level;
 
-import com.nqadmin.rowset.JdbcRowSetImpl;
 import com.nqadmin.swingset.SSComboBox;
 import com.nqadmin.swingset.SSDBNavImpl;
 import com.nqadmin.swingset.SSDataNavigator;
 import com.nqadmin.swingset.SSTextField;
+import com.nqadmin.swingset.utils.SSUtils;
+import java.util.List;
 
 /**
  * This example displays data from the supplier_data table.
@@ -65,17 +65,13 @@ import com.nqadmin.swingset.SSTextField;
  * <p>
  * Record navigation is handled with a SSDataNavigator.
  */
-public class Example2 extends JFrame {
-
+@SuppressWarnings("serial")
+public class Example2 extends JFrame
+{
 	/**
 	 * Log4j2 Logger
 	 */
-    private static final Logger logger = LogManager.getLogger(Example2.class);
-
-	/**
-	 * unique serial id
-	 */
-	private static final long serialVersionUID = 9205688923559422257L;
+    private static final Logger logger = SSUtils.getLogger();
 	
 	/**
 	 * screen label declarations
@@ -105,51 +101,49 @@ public class Example2 extends JFrame {
 	 * <p>
 	 * @param _dbConn - database connection
 	 */
-	public Example2(final Connection _dbConn) {
-
+	@SuppressWarnings("LeakingThisInConstructor")
+	public Example2(final Connection _dbConn)
+	{
 		// SET SCREEN TITLE
-			super("Example2");
-
+		super("Example2");
+		DemoUtil.initExampleFrame(this, null);
+		
 		// SET CONNECTION
-			connection = _dbConn;
-
+		connection = _dbConn;
+		
 		// SET SCREEN DIMENSIONS
-			setSize(MainClass.childScreenWidth, MainClass.childScreenHeight);
+		setSize(MainClass.childScreenWidth, MainClass.childScreenHeight);
 		
 		// SET SCREEN POSITION
-			setLocation(DemoUtil.getChildScreenLocation(this.getName()));
-
+		setLocation(DemoUtil.getChildScreenLocation(this.getName()));
+		
 		// INITIALIZE DATABASE CONNECTION AND COMPONENTS
-			try {
-				rowset = new JdbcRowSetImpl(connection);
-				rowset.setCommand("SELECT * FROM supplier_data");
-				navigator = new SSDataNavigator(rowset);
-			} catch (final SQLException se) {
-				logger.error("SQL Exception.", se);
-			}
-
+		try {
+			rowset = DemoUtil.getNewRowSet(connection);
+			rowset.setCommand("SELECT * FROM supplier_data");
+			navigator = new SSDataNavigator(rowset);
+		} catch (final SQLException se) {
+			logger.log(Level.ERROR, "SQL Exception.", se);
+		}
+		
 		/**
 		 * Various navigator overrides needed to support H2
 		 * H2 does not fully support updatable rowset so it must be
 		 * re-queried following insert and delete with rowset.execute()
 		 */
-		navigator.setDBNav(new SSDBNavImpl(this) {
-
-			/**
-			 * unique serial id
-			 */
-			private static final long serialVersionUID = 6964661066285402119L;
-
+		navigator.getNavigateActions().setDBNav(new SSDBNavImpl(this)
+		{
 			/**
 			 * Requery the rowset following a deletion. This is needed for H2.
 			 */
 			@Override
-			public void performPostDeletionOps() {
+			public void performPostDeletionOps()
+			{
 				super.performPostDeletionOps();
 				try {
 					rowset.execute();
 				} catch (final SQLException se) {
-					logger.error("SQL Exception.", se);
+					logger.log(Level.ERROR, "SQL Exception.", se);
 				}
 			}
 
@@ -157,12 +151,13 @@ public class Example2 extends JFrame {
 			 * Requery the rowset following an insertion. This is needed for H2.
 			 */
 			@Override
-			public void performPostInsertOps() {
+			public void performPostInsertOps()
+			{
 				super.performPostInsertOps();
 				try {
 					rowset.execute();
 				} catch (final SQLException se) {
-					logger.error("SQL Exception.", se);
+					logger.log(Level.ERROR, "SQL Exception.", se);
 				}
 			}
 
@@ -170,35 +165,31 @@ public class Example2 extends JFrame {
 			 * Obtain and set the PK value for the new record & perform any other actions needed before an insert.
 			 */
 			@Override
-			public void performPreInsertOps() {
-
+			public void performPreInsertOps()
+			{
 				// SSDBNavImpl will clear the component values
 				super.performPreInsertOps();
-
-				try {
-
-				// GET THE NEW RECORD ID.
-					final ResultSet rs = connection
-							.createStatement(ResultSet.TYPE_SCROLL_SENSITIVE, ResultSet.CONCUR_UPDATABLE)
-							.executeQuery("SELECT nextval('supplier_data_seq') as nextVal;");
+				
+				try (final ResultSet rs = connection.createStatement(
+							ResultSet.TYPE_SCROLL_SENSITIVE, ResultSet.CONCUR_UPDATABLE)
+						.executeQuery("SELECT nextval('supplier_data_seq') as nextVal;");
+				) {
+					// GET THE NEW RECORD ID.
 					rs.next();
 					final int supplierID = rs.getInt("nextVal");
 					txtSupplierID.setText(String.valueOf(supplierID));
-					rs.close();
-
-				// SET OTHER DEFAULTS
-//					 txtSupplierName.setText(null);
-//					 txtSupplierCity.setText(null);
-//					 cmbSupplierStatus.setSelectedValue(0);
-
+					
+					// // SET OTHER DEFAULTS
+					// 	 txtSupplierName.setText(null);
+					// 	 txtSupplierCity.setText(null);
+					// 	 cmbSupplierStatus.setSelectedValue(0);
+					
 				} catch(final SQLException se) {
-					logger.error("SQL Exception occured initializing new record.",se);
+					logger.log(Level.ERROR, "SQL Exception occured initializing new record.",se);
 				} catch(final Exception e) {
-					logger.error("Exception occured initializing new record.",e);
+					logger.log(Level.ERROR, "Exception occured initializing new record.",e);
 				}
-
 			}
-
 		});
 
 		// SETUP THE COMBO BOX OPTIONS TO BE DISPLAYED AND THEIR CORRESPONDING VALUES
@@ -206,67 +197,64 @@ public class Example2 extends JFrame {
 		// 		10 -> BAD
 		// 		20 -> BETTER
 		// 		30 -> GOOD
-			//final int[] codes = { 10, 20, 30 };
-			final Integer[] codes = { 10, 20, 30 };
-			final String[] options = { "Bad", "Better", "Good" };
-			//cmbSupplierStatus.setOptions(options, codes);
-			cmbSupplierStatus.setOptions(Arrays.asList(options), Arrays.asList(codes));
-
+		cmbSupplierStatus.setOptions(List.of("Bad", "Better", "Good"),
+									 List.of(10, 20, 30));
+		
 		// BIND THE COMPONENTS TO THE DATABASE COLUMNS
-			txtSupplierID.bind(rowset, "supplier_id");
-			txtSupplierName.bind(rowset, "supplier_name");
-			txtSupplierCity.bind(rowset, "city");
-			cmbSupplierStatus.bind(rowset, "status");
-			//this.cmbSupplierStatus.setSelectedIndex(1);
-
+		txtSupplierID.bind(rowset, "supplier_id");
+		txtSupplierName.bind(rowset, "supplier_name");
+		txtSupplierCity.bind(rowset, "city");
+		cmbSupplierStatus.bind(rowset, "status");
+		//this.cmbSupplierStatus.setSelectedIndex(1);
+		
 		// SET LABEL DIMENSIONS
-			lblSupplierID.setPreferredSize(MainClass.labelDim);
-			lblSupplierName.setPreferredSize(MainClass.labelDim);
-			lblSupplierCity.setPreferredSize(MainClass.labelDim);
-			lblSupplierStatus.setPreferredSize(MainClass.labelDim);
-
+		lblSupplierID.setPreferredSize(MainClass.labelDim);
+		lblSupplierName.setPreferredSize(MainClass.labelDim);
+		lblSupplierCity.setPreferredSize(MainClass.labelDim);
+		lblSupplierStatus.setPreferredSize(MainClass.labelDim);
+		
 		// SET BOUND COMPONENT DIMENSIONS
-			txtSupplierID.setPreferredSize(MainClass.ssDim);
-			txtSupplierName.setPreferredSize(MainClass.ssDim);
-			txtSupplierCity.setPreferredSize(MainClass.ssDim);
-			cmbSupplierStatus.setPreferredSize(MainClass.ssDim);
-
+		txtSupplierID.setPreferredSize(MainClass.ssDim);
+		txtSupplierName.setPreferredSize(MainClass.ssDim);
+		txtSupplierCity.setPreferredSize(MainClass.ssDim);
+		cmbSupplierStatus.setPreferredSize(MainClass.ssDim);
+		
 		// SETUP THE CONTAINER AND LAYOUT THE COMPONENTS
-			final Container contentPane = getContentPane();
-			contentPane.setLayout(new GridBagLayout());
-			final GridBagConstraints constraints = new GridBagConstraints();
-
-			constraints.gridx = 0;
-			constraints.gridy = 0;
-			contentPane.add(lblSupplierID, constraints);
-			constraints.gridy = 1;
-			contentPane.add(lblSupplierName, constraints);
-			constraints.gridy = 2;
-			contentPane.add(lblSupplierCity, constraints);
-			constraints.gridy = 3;
-			contentPane.add(lblSupplierStatus, constraints);
-
-			constraints.gridx = 1;
-			constraints.gridy = 0;
-			contentPane.add(txtSupplierID, constraints);
-			constraints.gridy = 1;
-			contentPane.add(txtSupplierName, constraints);
-			constraints.gridy = 2;
-			contentPane.add(txtSupplierCity, constraints);
-			constraints.gridy = 3;
-			contentPane.add(cmbSupplierStatus, constraints);
-
-			constraints.gridx = 0;
-			constraints.gridy = 4;
-			constraints.gridwidth = 2;
-			contentPane.add(navigator, constraints);
-
+		final Container contentPane = getContentPane();
+		contentPane.setLayout(new GridBagLayout());
+		final GridBagConstraints constraints = new GridBagConstraints();
+		
+		constraints.gridx = 0;
+		constraints.gridy = 0;
+		contentPane.add(lblSupplierID, constraints);
+		constraints.gridy = 1;
+		contentPane.add(lblSupplierName, constraints);
+		constraints.gridy = 2;
+		contentPane.add(lblSupplierCity, constraints);
+		constraints.gridy = 3;
+		contentPane.add(lblSupplierStatus, constraints);
+		
+		constraints.gridx = 1;
+		constraints.gridy = 0;
+		contentPane.add(txtSupplierID, constraints);
+		constraints.gridy = 1;
+		contentPane.add(txtSupplierName, constraints);
+		constraints.gridy = 2;
+		contentPane.add(txtSupplierCity, constraints);
+		constraints.gridy = 3;
+		contentPane.add(cmbSupplierStatus, constraints);
+		
+		constraints.gridx = 0;
+		constraints.gridy = 4;
+		constraints.gridwidth = 2;
+		contentPane.add(navigator, constraints);
+		
 		// DISABLE THE PRIMARY KEY
-			txtSupplierID.setEnabled(false);
-
+		txtSupplierID.setEnabled(false);
+		
 		// MAKE THE JFRAME VISIBLE
-			setVisible(true);
-			pack();
+		setVisible(true);
+		pack();
 	}
 
 }
